[gd_scene load_steps=10 format=1]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://textures/2ca5ec997e131a94f8d87e2de5d99872.tex" type="Texture" id=2]
[ext_resource path="res://scripts/fire ship.gd" type="Script" id=3]
[ext_resource path="res://resources/trail.tres" type="Material" id=4]
[ext_resource path="res://models/scened model/fighter05.scn" type="PackedScene" id=5]
[ext_resource path="res://scripts/assign new mat.gd" type="Script" id=6]
[ext_resource path="res://sound/SpatialSamplePlayer.tscn" type="PackedScene" id=7]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 0.389702, 0.296235, 0.511454 )

[sub_resource type="FixedMaterial" id=2]

flags/visible = true
flags/double_sided = false
flags/invert_faces = false
flags/unshaded = true
flags/on_top = false
flags/lightmap_on_uv2 = true
flags/colarray_is_srgb = true
params/blend_mode = 1
params/depth_draw = 1
params/line_width = 1.56945e-43
fixed_flags/use_alpha = true
fixed_flags/use_color_array = true
fixed_flags/use_point_size = false
fixed_flags/discard_alpha = false
fixed_flags/use_xy_normalmap = false
params/diffuse = Color( 1, 1, 1, 1 )
params/specular = Color( 1, 0.910156, 0.910156, 1 )
params/emission = Color( 0, 0, 0, 1 )
params/specular_exp = 40
params/detail_mix = 1.0
params/normal_depth = 1
params/shader = 0
params/shader_param = 0.5
params/glow = 0
params/point_size = 1.0
uv_xform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
textures/diffuse = ExtResource( 2 )
textures/diffuse_tc = 0
textures/detail_tc = 0
textures/specular_tc = 0
textures/emission_tc = 0
textures/specular_exp_tc = 0
textures/glow_tc = 0
textures/normal_tc = 0
textures/shade_param_tc = 0

[node name="KinematicBody" type="KinematicBody" groups=[
"player",
]]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform( -4.37114e-08, 0, -1, 8.74228e-08, -1, -3.82137e-15, -1, -8.74228e-08, 4.37114e-08, 0.0770794, 2.94549e-16, -3.36925e-09 )
shapes/0/trigger = false
collision/layers = 524291
collision/mask = 2
collide_with/static = true
collide_with/kinematic = true
collide_with/rigid = true
collide_with/character = false
collision/margin = 0.01
script/script = ExtResource( 1 )

[node name="firept1" type="Position3D" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( -4.37114e-08, 0, -1, 8.74228e-08, -1, -3.82137e-15, -1, -8.74228e-08, 4.37114e-08, 0.107043, -0.0189316, -0.268691 )

[node name="firept2" type="Position3D" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( -4.37114e-08, 0, -1, 8.74228e-08, -1, -3.82137e-15, -1, -8.74228e-08, 4.37114e-08, 0.187773, -0.0389054, 0.177537 )

[node name="firept3" type="Position3D" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( -4.37114e-08, 0, -1, 8.74228e-08, -1, -3.82137e-15, -1, -8.74228e-08, 4.37114e-08, 0.0841273, -0.00416556, 0.260967 )

[node name="firept4" type="Position3D" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( -4.37114e-08, 0, -1, 8.74228e-08, -1, -3.82137e-15, -1, -8.74228e-08, 4.37114e-08, 0.174938, -0.00416556, -0.18934 )

[node name="Particles" type="Particles" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( -4.37114e-08, 0, -1, 8.74228e-08, -1, -3.82137e-15, -1, -8.74228e-08, 4.37114e-08, 0, 0, 0 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
material = SubResource( 2 )
amount = 100
emitting = false
visibility = AABB( -4, -4, -4, 8, 8, 8 )
emission_extents = Vector3( 0.1, 0.1, 0.1 )
emission_base_velocity = Vector3( 0, 0, 0 )
emission_points = Vector3Array( -0.0470435, -0.0882649, -0.231436, 0.0185353, 0.0771572, -0.142676, -0.145295, -0.0444249, -0.0224615, -0.132605, 0.0671309, -0.10568, 0.00893325, -0.0270454, 0.158947, 0.0733089, -0.0733091, -0.447827, 0.0119147, 0.00740803, 0.11764, 0.0074, -0.0295643, -0.470661, 0.238665, -0.0195818, -0.184029, 0.0699554, 0.0705977, 0.142416, -0.158388, 0.0927752, 0.144198, 0.0666161, -0.0695895, 0.0834342, 0.154125, 0.00548797, 0.0229781, 0.0912254, 0.0758877, -0.0457819, -0.186298, 0.035303, -0.140677, 0.102411, 0.0461117, -0.343657, -0.0406512, 0.0758792, -0.276031, -0.079703, 0.061519, 0.0940718, -0.179261, -0.0783918, 0.0299803, -0.00266755, -0.105681, 0.142759, 0.216801, 0.00139556, -0.0745526, -0.00830339, -0.132326, -0.433077, -0.285103, -0.0263403, -0.132349, -0.0875827, 0.0758877, -0.0869013, 0.111393, 0.0655773, -0.132246, -0.0873697, -0.057283, 0.116111, 0.17631, -0.0958828, 0.0223622, -0.194326, -0.0965708, 0.0439329, -0.164462, -0.0635921, 0.0454492, 0.0518967, -0.0376538, 0.150882, -0.290369, 0.0254112, -0.0383724, -0.296163, 0.0202308, -0.0364233, 0.0850494, 0.0277175, -0.379229, -0.0318165, 0.0557888, -0.382373, 0.169237, -0.0130842, -0.262755, 0.190157, 0.0982216, 0.0918243, 0.0903694, -0.0388527, -0.445998, 0.0671297, 0.075875, -0.261284, -0.187547, 0.13465, 0.113469, -0.0403257, 0.0786203, -0.0949526, -0.143288, 0.0770431, 0.130073, 0.144567, -0.0289242, -0.167992, -0.0148285, 0.0882421, 0.134642, 0.0414517, -0.00277918, 0.121995, 0.1521, 0.0727417, -0.105205, 0.132658, -0.0691602, -0.125815, 0.132029, 0.0449409, -0.25493, -0.031731, 0.0407731, 0.166489, -0.0595744, -0.132995, -0.367568, -0.118441, 0.0629327, 0.132291, -0.0489381, -0.0664762, -0.00385517, -0.0859012, 0.0734352, -0.317187, -0.0860908, -0.113805, -0.338929, 0.182219, -0.100153, 0.201294, 0.106786, 0.0701844, -0.189376, 0.145576, 0.0234602, 0.109502, -0.0244112, 0.0303825, 0.101101, 0.140729, -0.00885574, 0.0834342, 0.157135, 0.0944742, -0.123117, 0.197674, -0.0279153, -0.203745, 0.110321, 0.0221907, 0.148509, -0.16088, 0.0768372, 0.149594, 0.0496499, 0.0968459, -0.18326, 0.0662094, -0.00737102, 0.121995, -0.137874, -0.0298291, 0.165608, -0.0875039, 0.00317688, 0.121995, -0.0057024, 0.0876366, -0.0548067, -0.0338496, -0.0872398, -0.202108, 0.0534188, 0.0947187, -0.174062, -0.13921, -0.0828338, 0.0198186, -0.194489, -0.0936189, 0.137443, 0.0145727, 0.0815991, 0.0862656, 0.129263, 0.0477073, -0.1349, -0.236498, -0.0279153, -0.0878431, -0.185561, -0.0846913, 0.0351204, -0.0335206, 0.0100054, 0.147552, -0.17832, 0.0809291, 0.0496634, 0.111223, -0.0544318, 0.14957, 0.0754834, -0.0724087, -0.0883634, -0.0300119, 0.0955631, -0.250388, 0.150622, 0.0313944, -0.199473, 0.00579446, -0.0724087, -0.113644, 0.00596335, -0.0190522, 0.152581, -0.256184, 0.013597, -0.0444942, -0.129308, -0.0602559, 0.0928226, -0.0529254, -0.0666708, -0.0127407, 0.200426, 0.108491, 0.0951558, 0.128118, 0.0806768, -0.00999028, 0.0234976, -0.0323517, 0.166489, 0.148658, 0.0899081, -0.00953484, -0.100941, 0.0643153, -0.328467, 0.016356, -0.099184, -0.3171, -0.0982097, -0.0724087, -0.0883385, 0.196627, 0.142985, 0.193876, 0.107648, -0.0658438, -0.231798, -0.154133, -0.0977564, 0.133203, 0.160407, 0.0354048, 0.0506953, 0.00356896, 0.0907189, -0.0554685, -0.12194, 0.068448, 0.0904727, -0.116089, -0.0461986, 0.128575, -0.166958, 0.0944557, -0.105054, -0.105539, -0.0776928, -0.266024, 0.150691, 0.0191851, -0.0221621, -0.0945034, -0.0724087, 0.0569184, -0.0815764, 0.0758877, -0.0687943, -0.153905, 0.0690915, -0.163243, -0.214872, -0.131874, 0.145382, 0.0285781, -0.0326514, 0.164894, -0.0946978, -0.0591368, -0.382051, -0.0239626, 0.0758877, 0.0284189, -0.152564, 0.0748128, 0.152823, 0.0283415, -0.118565, -0.47307, -0.151032, -0.0204466, -0.0361973, 0.209069, 0.117134, 0.114843, 0.159975, -0.0093707, -0.291677, 0.175292, -0.095707, 0.199287, -0.284362, -0.0279153, -0.0608668, -0.0200283, 0.0878273, 0.110348, -0.151094, -0.0821414, -0.136065, -0.283933, -0.00806455, -0.0422303, 0.129077, -0.0258984, 0.130522, -0.159467, -0.0905142, -0.0983179, 0.0185326, -0.0738179, -0.225371, -0.00648134, 0.107593, 0.0482606, 0.0229051, 0.0758877, -0.0417397, -0.141887, -0.0410172, -0.0146041, -0.0696481, -0.129254, -0.340408, 0.160407, -0.020648, 0.0956709, 0.0990194, -0.051281, 0.123855, -0.0660442, 0.0714173, -0.346984, -0.150164, -0.0618716, -0.159364, 0.0377256, -0.0872398, -0.135894, -0.0916842, -0.0276379, 0.122797, 0.0145727, 0.0763052, 0.0177241, -0.204179, -0.0130842, -0.248378, -0.287248, -0.0251787, -0.114423, 0.0726965, -0.105294, -0.417638, 0.167829, -0.00696168, -0.0596861, 0.0145727, 0.0751522, 0.0907665, -0.0743859, 0.0976781, -0.216007, -0.118677, 0.0373988, 0.157195, -0.298222, -0.0130842, -0.153102, 0.0184154, -0.0724087, 0.0735747, 0.133762, 0.045705, 0.138103, 0.169515, -0.027311, -0.245838, 0.0888024, -0.00256748, -0.392072, 0.129182, -0.0443091, -0.213703, 0.165531, -0.11461, 0.0740767, 0.212266, -0.116852, 0.169615, -0.0592778, -0.0386839, 0.144087, -0.0261575, 0.0758877, 0.0237186, -0.057712, 0.0990109, -0.197516, -0.0240186, 0.0961475, -0.250287, 0.136037, 0.0508532, 0.0922043, -0.155964, 0.07115, -0.111272, 0.195764, 0.127599, 0.0645076, 0.194186, 0.142376, 0.124209, 0.142104, -0.0313876, 0.01142, 0.206465, 0.138305, 0.123745, 0.203017, 0.111082, 0.137856, 0.0667841, 0.0610839, 0.166489, -0.0987083, -0.0481157, -0.336011, 0.14486, -0.0813621, -0.109607, -0.251129, -0.00283624, -0.0411577, 0.198846, 0.0294729, -0.216475, -0.0959529, -0.0913431, -0.410058, -0.0942581, -0.0402442, -0.389147, -0.00609017, 0.0882421, 0.134921, -0.281659, 0.0313944, -0.0551567, -0.039108, -0.0724087, 0.0685293, 0.127913, -0.0280155, 0.0834342, -0.072814, 0.0699553, -0.00852187, -0.133616, 0.020617, 0.0865384, -0.0504827, -0.0394394, -0.471917, -0.314174, 0.0086506, -0.0885394, -0.0426863, -0.0477272, -0.478791, -0.0259301, 0.0841303, -0.173665, -0.0942581, 0.00812511, -0.357962, 0.145576, -0.0254777, -0.0490012, -0.0161244, -0.14083, -0.361229, 0.0531348, -0.0698446, 0.0834342, -0.0336208, -0.0872398, -0.152783, 0.106533, 0.0603058, -0.31946, -0.198598, 0.141676, 0.22295, 0.0192462, -0.134037, -0.424086, 0.146164, 0.021502, -0.0217489, 0.211588, -0.116174, 0.106034, 0.0406078, -0.049903, -0.475814, -0.139335, 0.0430907, -0.148489, 0.27274, 0.0212624, -0.0456742, 0.0956552, 0.0758877, -0.00516686, 0.0529536, 0.0188319, 0.121995, -0.0534577, -0.0999621, -0.280763, 0.0394169, 0.103092, -0.225725, 0.224392, -0.0279153, -0.142401, -0.0648977, 0.0129833, -0.430943, -0.133541, 0.0680674, -0.118064, -0.0335294, -0.0872398, -0.153938, 0.00847017, 0.0177092, 0.131528, -0.232865, 0.0313944, -0.174516, -0.121679, 0.0518826, 0.113312, -0.0335242, 0.0301287, 0.151209, 0.017177, 0.0758877, -0.00573278, -0.00424074, -0.107315, 0.134382, 0.201399, 0.124551, 0.244791, 0.202441, 0.0165632, -0.248529, 0.0185326, -0.0837092, -0.101763, 0.196072, -0.100658, 0.0859253, 0.0626295, 0.0817507, -0.110681, 0.109126, -0.0510348, 0.131371, 0.0185326, -0.0795011, -0.113752, -0.19636, 0.0373268, -0.174914, -0.151838, -0.0279153, -0.248654, -0.0725062, 0.0613667, 0.124816, 0.0264037, 0.079085, -0.118839, -0.173916, -0.0173624, -0.0644686, 0.173822, -0.078408, 0.0437751, 0.0604391, -0.0523365, 0.1629, 0.109473, 0.067497, -0.0402092, 0.0574234, 0.0699553, 0.0518242, 0.0785268, -0.100083, -0.418379, -0.127191, 0.055235, -0.3003, 0.0575523, 0.0762687, -0.0725809, -0.19055, -0.134174, 0.177476, 0.107811, -0.0656802, -0.247022, -0.0275335, 0.0780292, -0.13197, 0.204194, -0.00234494, -0.0619455, -0.0990514, 0.0397141, 0.139182, -0.0963528, -0.0902826, -0.410095, 0.11653, 0.0604404, -0.103676, 0.0888024, -0.0438634, -0.383965, 0.093081, 0.0758877, -0.0497699, -0.128774, 0.0573377, 0.086694, 0.255633, 0.0165632, -0.188539, 0.0147281, -0.0278567, 0.0834342, 0.0124718, -0.0877666, 0.0366233, -0.018287, -0.0724087, -0.238224, 0.0018697, -0.102924, 0.035985, -0.0799322, -0.0955423, -0.307361, 0.110616, 0.0298625, -0.354284, 0.138391, 0.0708492, -0.184652, 0.0660724, 0.0718966, 0.065545, -0.130141, -0.0488062, -0.267614, 0.12967, -0.0468328, -0.119099, 0.0942787, -0.0537904, 0.0998305, -0.1613, 0.0267343, -0.264193, 0.158342, -0.100743, 0.159097, 0.158434, -0.0893634, -0.1245, -0.119766, -0.0262595, -0.349568, -0.0651409, -0.0891776, -0.459598, 0.0596191, 0.0695846, 0.142443, -0.134176, 0.0482503, -0.0983905, -0.244865, -0.0287966, -0.149432, 0.0585521, -0.00283922, 0.121995, -0.136295, 0.0461314, -0.152679, -0.206649, 0.142376, 0.117086, 0.18598, 0.0940451, 0.155478, 0.129017, -0.0482214, 0.144266, -0.129876, -0.0734993, 0.0040856, 0.0366971, 0.0758877, 0.0761574, -0.078392, 0.0758877, -0.0296461, 0.136704, -0.0367878, -0.143449, 0.110538, -0.0503457, -0.297318, 0.0542584, 0.0736922, -0.33668, -0.145971, -0.0770181, -0.173085, 0.163369, 0.00342225, -0.288283, 0.00717296, 0.0988213, 0.134992, 0.00158771, -0.0724087, -0.122088, -0.219356, 0.0110062, -0.0716517, -0.146166, -0.0772126, -0.0814992, 0.129378, -0.0131144, 0.109934, 0.0921085, -0.0367295, -0.403624, -0.0714666, 0.00181496, -0.436654, 0.181373, 0.133932, 0.106445, -0.0465441, -0.134202, -0.393963, 0.242172, -0.0252273, -0.173163, -0.141914, -0.0566283, -0.195855, -0.283123, 0.0165632, -0.1691, 0.0556365, 0.105486, -0.236802, -0.134203, -0.059875, -0.1998, -0.0430946, -0.0160478, 0.128086, 0.196694, -0.0129173, -0.0613216, -0.106292, 0.0483549, -0.342774, 0.0713965, -0.0424178, 0.136628, 0.173939, -0.0785249, 0.0983899, -0.0310191, 0.0831605, -0.145664, -0.165863, 0.0267821, 0.0298302, 0.0487049, 0.0785153, -0.258587, -0.146143, 0.0798979, 0.133587, -0.211861, 0.131096, 0.0776735, 0.0714659, 0.00334295, -0.434348, -0.0442155, -0.0885522, -0.233091, -0.0942581, -0.0240266, -0.353754, 0.0334268, -0.0872398, -0.130149, -0.0185918, 0.0902941, 0.0206695, 0.145222, 0.0532865, 0.0445441, -0.309798, -0.00215793, -0.0329901, 0.187421, -0.0338478, -0.155742, 0.00974823, -0.0285692, 0.136616, -0.0276461, -0.113968, -0.303485, 0.0217249, -0.0724087, 0.0138069, -0.0239883, -0.078702, -0.163999, 0.0257045, -0.0435382, 0.0834342, -0.243671, -0.0279153, -0.159878, 0.154861, 0.0629257, 0.0179524, -0.0574322, -0.0664762, 0.0396527, -0.0942581, -0.0359717, -0.394495, -0.189584, 0.123338, 0.221285, -0.0200283, -0.0812419, 0.0440612, -0.175972, 0.123075, 0.159254, 0.197913, -0.0314955, -0.188928, -0.0947248, -0.0659277, -0.39693, 0.0843183, 0.0135529, -0.408188, -0.0375403, -0.0740072, -0.485891, 0.0882391, -0.0657728, -0.434951, -0.0777466, 0.0624127, -0.353516, 0.149434, -0.0851651, 0.161198, -0.109956, -0.0112178, 0.125323, -0.068607, -0.0630834, -0.469957, -0.156832, -0.0430859, 0.042736, 0.144816, -0.0286757, -0.185311, 0.0457813, 0.0741279, -0.225752, -0.164782, 0.0673918, 0.0564127, 0.149617, 0.0313944, -0.0900788, -0.146735, -0.0322123, -0.126943, -0.0163001, 0.0601519, 0.0862241, -0.0890805, 0.060611, 0.0834342, -0.0966408, 0.0758877, -0.153495, 0.264753, 0.0313944, -0.061622, 0.0878964, -0.0650288, 0.136795, -0.0931682, -0.0703974, -0.33994, -0.122632, -0.0563151, -0.178614, -0.130488, 0.0650136, -0.15549, 0.0788326, -0.0724087, -0.0278632, -0.0275833, -0.134441, -0.322805, 0.148026, -0.0526118, 0.0376346, 0.160407, 0.00325787, 0.0805898, -0.154725, -0.0850003, 0.140882, -0.107771, -0.0711764, -0.0240427, -0.314174, 0.00512059, -0.0607265, -0.190413, 0.0373268, -0.144667, 0.140386, -0.0894652, 0.0762766, -0.145399, 0.037027, -0.20526, 0.176027, -0.00749002, -0.0596861, -0.153026, 0.0875521, -0.034721, 0.13271, -0.0407813, -0.254633, -0.136358, -0.0799816, 0.0328088, 0.0186678, 0.045707, 0.163099, 0.0485706, -0.124566, -0.412948, -0.205413, 0.142376, 0.174399, 0.0219779, 0.0915619, -0.209164, -0.217563, 0.125846, 0.22572, 0.110371, 0.0665994, -0.277694, 0.059959, 0.0556698, 0.159209, 0.161513, -0.0660991, -0.00372713, -0.165863, -0.00623861, 0.0960057, -0.135497, 0.0700229, -0.146597, -0.0683314, 0.0699553, 0.00407745, -0.028929, -0.0585761, 0.0834342, 0.0136608, 0.0758877, -0.157493, 0.174348, -0.0980022, 0.0225009, -0.162153, -0.0612829, 0.025717, 0.0559141, -0.0980269, -0.470855, 0.0783278, -0.0336781, -0.449907, 0.191409, -0.0305791, -0.197057, 0.00375968, 0.103701, 0.0691544, -0.0601869, 0.0797776, -0.297946, 0.274782, 0.0274713, -0.140864, 0.12597, 0.00289849, -0.3427, 0.210489, -0.115075, 0.117841, 0.207699, 0.115764, 0.209914, -0.0442622, -0.0664762, 0.00568826, 0.155861, -0.038602, 0.0879981, 0.111745, -0.0617465, -0.21622, 0.0923102, 0.0650949, -0.330366, 0.0817964, -0.0761354, -0.440662, 0.158071, 0.0972816, 0.162999, -0.151032, 0.0213106, 0.112346, -0.15436, -0.0854069, -0.105026, 0.114912, 0.00861999, 0.135745, 0.127024, -0.0364123, 0.0941222, -0.119075, -0.0598719, -0.20286, 0.0774066, 0.0612071, 0.100226, 0.0994644, -0.0823784, -0.282602, 0.150972, -0.0874746, -0.0448655, 0.136866, -0.0366253, -0.269491, -0.0534577, -0.0836846, -0.077545, 0.109805, 0.0671653, 0.0353292, 0.20564, 0.139129, 0.166661, 0.0951628, 0.0758877, -0.0779034, 0.160136, 0.0186584, -0.0456506, 0.195447, 0.103512, 0.0776867, -0.0185605, 0.0903388, 0.0305467, 0.137196, -0.0357356, 0.0834342, -0.209806, -0.130525, 0.226083, 0.0395679, 0.0944653, -0.176696, 0.0286077, 0.0788918, -0.111421, 0.299909, 0.0165632, -0.13669, 0.00556103, 0.0566825, 0.0834342, 0.154537, -0.0399257, 0.0842227, 0.0267272, -0.14218, -0.370727, -0.15567, -0.0956162, 0.147375, -0.0394623, 0.0758861, -0.30027, 0.1538, 0.0744422, -0.140045, -0.127324, 0.0587651, 0.134094, 0.308718, 0.00910654, -0.078783, -0.0843364, -0.100201, -0.417505, 0.0204802, 0.0414632, 0.131227, -0.0982087, 0.0289238, -0.352142, 0.0170697, 0.0268621, 0.121396, -0.0623228, -0.0724087, -0.20935, -0.057901, 0.0647692, 0.0834342, -0.0145407, 0.0504663, -0.396001, -0.0752387, 0.0689754, -0.337393, -0.0790394, -0.0349417, -0.449423, -0.116973, -0.0619739, -0.0740015, 0.0874882, -0.0724087, -0.12247, -0.199627, 0.108197, 0.0534444, 0.0985557, -0.0724087, 0.0589064, 0.0390911, 0.0758877, 0.0787469, -0.202267, 0.0373268, -0.177371, -0.0171456, -0.0566729, 0.08565, -0.112606, 0.06982, -0.0614359, 0.20305, 0.125781, 0.247338, -0.127549, 0.0620749, -0.146264, -0.0239883, -0.0741758, -0.214813, -0.140675, 0.0417513, -0.276445, 0.058387, 0.00900703, -0.435625, 0.102533, -0.0606341, -0.278613, -0.0436243, -0.0583552, 0.157014, 0.15827, 0.0982513, -0.00337871, 0.0335709, -0.0382622, 0.154191, 0.269605, -0.0279153, -0.121667, -0.045629, -0.0305297, 0.150284, -0.170647, 0.0917481, -0.0464072, 0.0074472, -0.0896946, 0.00718377, -0.113239, -0.0657078, -0.047806, -0.275519, -0.0279153, -0.0855366, -0.14916, 0.0517694, -0.0238357, 0.0121641, -0.0882065, 0.045565, -0.0296037, 0.0809837, -0.139582, 0.0634538, 0.0873261, -0.14426, -0.00540044, -0.0387244, -0.477243, 0.158221, 0.0213634, -0.042077, -0.227948, 0.0161324, -0.0758281, 0.0697109, -0.0724087, -0.0881655, 0.0537907, 0.0902441, -0.148973, 0.160407, -0.0336305, 0.0692625, 0.174139, -0.123218, 0.176794, 0.180555, 0.133113, 0.185264, 0.0889811, -0.0555642, -0.384335, 0.209614, 0.117679, 0.186334, 0.308718, 0.0130899, -0.127688, 0.223642, 0.0213807, -0.0751388, 0.146384, 0.0989421, 0.0319475, -0.203851, 0.117014, 0.0597689, -0.0618198, -0.0724087, -0.187617, -0.00974558, -0.0724087, -0.207923, -0.152471, 0.086997, -0.0374276, -0.0864731, 0.0758776, -0.270293, -0.170983, 0.0914125, -0.019392, 0.148612, 0.0885938, -0.0744337, -0.165149, -0.0180229, -0.0752556, 0.109644, 0.0673267, -0.204203, 0.0418723, 0.058753, 0.166489, -0.170915, 0.118018, 0.17519, -0.0119655, -0.0208594, 0.153884, -0.0528628, 0.0758877, -0.0334888, -0.0186769, 0.0901726, 0.0242667, 0.265092, 0.0233975, -0.156945, 0.111355, -0.0621368, 0.0367411, -0.303786, 0.0165632, -0.0522079, -0.134781, -0.0658278, -0.0834651, -0.175699, -0.0261312, -0.121359, 0.0747746, 0.0884349, -0.184378, -0.110021, 0.0724048, 0.0708614, -0.165786, -0.0649164, 0.0327948, -0.0170824, -0.0627549, -0.486066, 0.111003, 0.0104528, 0.130315, 0.0501266, -0.0724087, -0.0806198, 0.113604, 0.014091, 0.145541, -0.219135, -0.118572, 0.18477, -0.0982158, 0.0462049, -0.356283, -0.0247433, -0.0156572, 0.157478, 0.107611, -0.0113564, -0.333118, -0.175361, 0.0779702, 0.010692, 0.14814, -0.0424634, 0.075863, 0.127558, -0.0220791, -0.337589, 0.185751, 0.0373268, -0.14983, -0.245317, 0.00553408, -0.21179, -0.136522, 0.0517078, -0.0859755, -0.139728, 0.0298415, 0.156725, -0.0770638, -0.10879, -0.418508, 0.109724, 0.0476265, 0.0986822, -0.143225, 0.0638325, 0.123637, -0.0714501, -0.0664762, 0.0121908, -0.146611, -0.0457417, 0.0396616, -0.00954961, -0.0550111, 0.0834342, -0.182733, 0.0373268, -0.1857, -0.119485, 0.0642848, 0.132316, 0.186843, -0.0279153, -0.223387, -0.162322, -0.0925973, 0.170874, -0.173865, 0.0764741, 0.121205, -0.0435437, -0.0888283, -0.234682, 0.234605, -0.0279869, -0.125926, 0.057181, -0.0724087, 0.0706912, 0.146306, -0.0279153, -0.121846, 0.176557, -0.081143, 0.0787703, -0.00812931, -0.0961467, 0.00478117, -0.120868, 0.00351192, 0.142031, -0.0882395, -0.0724087, -0.0632837, 0.132941, -0.0816726, 0.119779 )
gravity_normal = Vector3( 0, 0.2, 1 )
local_coords = true
emit_timeout = 0.0
vars/lifetime = 2.0
vars/spread = 0.2
vars/gravity = 4.0
vars/linear_vel = 0.0
vars/angular_vel = 0.0
vars/linear_accel = 0.0
vars/radial_accel = 0.0
vars/tan_accel = 0.0
vars/damping = 0.0
vars/initial_size = 0.1
vars/final_size = 0.0
vars/initial_angle = 0.0
vars/height_from_velocity = false
vars/height = 1.0
vars/height_speed_scale = 0.0
rand/lifetime = 0.0
rand/spread = 3.0
rand/gravity = 2.0
rand/linear_vel = 0.0
rand/angular_vel = 2.45
rand/linear_accel = 0.0
rand/radial_accel = 0.0
rand/tan_accel = 0.0
rand/damping = 0.0
rand/initial_size = 0.0
rand/final_size = 0.0
rand/initial_angle = 0.0
rand/height = 0.0
rand/height_speed_scale = 0.0
color_phases/count = 2
phase_0/pos = 0.0
phase_0/color = Color( 0.996094, 0.489961, 0.120621, 1 )
phase_1/pos = 0.58
phase_1/color = Color( 0.976562, 0.305325, 0.125885, 1 )
phase_2/pos = 1.0
phase_2/color = Color( 0, 0, 0, 1 )
phase_3/pos = 1.0
phase_3/color = Color( 0, 0, 0, 1 )
script/script = ExtResource( 3 )

[node name="Position3D" type="Position3D" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( -4.36906e-08, 0, -1, 8.74228e-08, -1, -3.81955e-15, -1, -8.74228e-08, 4.36906e-08, -1.94395, -0.518605, 0.00706165 )

[node name="Particles2" type="Particles" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( -4.37028e-08, 1.17484e-14, -1, 8.74274e-08, -1, -1.3922e-15, -1, -8.74173e-08, 4.36866e-08, 0.00615126, -0.00270871, -0.0778052 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
material = ExtResource( 4 )
amount = 100
emitting = true
visibility = AABB( -4, -4, -4, 8, 8, 8 )
emission_extents = Vector3( 0, 0, 0 )
emission_base_velocity = Vector3( 0, 0, 0 )
emission_points = Vector3Array(  )
gravity_normal = Vector3( 0, 0, 0 )
local_coords = true
emit_timeout = 0.0
vars/lifetime = 1.0
vars/spread = 0.0
vars/gravity = 5.0
vars/linear_vel = 1.0
vars/angular_vel = 0.0
vars/linear_accel = 0.0
vars/radial_accel = 0.0
vars/tan_accel = 0.0
vars/damping = 1.0
vars/initial_size = 0.045
vars/final_size = 0.0
vars/initial_angle = 0.0
vars/height_from_velocity = false
vars/height = 1.0
vars/height_speed_scale = 0.0
rand/lifetime = 0.0
rand/spread = 0.0
rand/gravity = 0.0
rand/linear_vel = 0.0
rand/angular_vel = 0.0
rand/linear_accel = 0.0
rand/radial_accel = 0.0
rand/tan_accel = 0.0
rand/damping = 0.0
rand/initial_size = 0.0
rand/final_size = 0.0
rand/initial_angle = 0.0
rand/height = 0.0
rand/height_speed_scale = 0.0
color_phases/count = 3
phase_0/pos = 0.0
phase_0/color = Color( 0.920032, 0.941406, 0.257416, 1 )
phase_1/pos = 0.15
phase_1/color = Color( 1, 0.0820312, 0.0820312, 1 )
phase_2/pos = 1.0
phase_2/color = Color( 0, 0, 0, 1 )
phase_3/pos = 1.0
phase_3/color = Color( 0, 0, 0, 1 )

[node name="Particles1" type="Particles" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( -4.37028e-08, 1.17484e-14, -1, 8.74274e-08, -1, -9.48105e-16, -1, -8.74173e-08, 4.36866e-08, 0.00796169, 0.00337928, 0.0845193 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
material = ExtResource( 4 )
amount = 100
emitting = true
visibility = AABB( -4, -4, -4, 8, 8, 8 )
emission_extents = Vector3( 0, 0, 0 )
emission_base_velocity = Vector3( 0, 0, 0 )
emission_points = Vector3Array(  )
gravity_normal = Vector3( 0, 0, 0 )
local_coords = true
emit_timeout = 0.0
vars/lifetime = 1.0
vars/spread = 0.0
vars/gravity = 5.0
vars/linear_vel = 1.0
vars/angular_vel = 0.0
vars/linear_accel = 0.0
vars/radial_accel = 0.0
vars/tan_accel = 0.0
vars/damping = 1.0
vars/initial_size = 0.045
vars/final_size = 0.0
vars/initial_angle = 0.0
vars/height_from_velocity = false
vars/height = 1.0
vars/height_speed_scale = 0.0
rand/lifetime = 0.0
rand/spread = 0.0
rand/gravity = 0.0
rand/linear_vel = 0.0
rand/angular_vel = 0.0
rand/linear_accel = 0.0
rand/radial_accel = 0.0
rand/tan_accel = 0.0
rand/damping = 0.0
rand/initial_size = 0.0
rand/final_size = 0.0
rand/initial_angle = 0.0
rand/height = 0.0
rand/height_speed_scale = 0.0
color_phases/count = 3
phase_0/pos = 0.0
phase_0/color = Color( 0.920032, 0.941406, 0.257416, 1 )
phase_1/pos = 0.15
phase_1/color = Color( 1, 0.0820312, 0.0820312, 1 )
phase_2/pos = 1.0
phase_2/color = Color( 0, 0, 0, 1 )
phase_3/pos = 1.0
phase_3/color = Color( 0, 0, 0, 1 )

[node name="fighter2" parent="." instance=ExtResource( 5 )]

transform/local = Transform( 0.000128209, 0, 0.262596, 2.29568e-08, -0.262596, -1.12084e-11, 0.262596, 2.29568e-08, -0.000128209, 0.0989463, 0, 0 )
script/script = ExtResource( 6 )

[node name="SpatialSamplePlayer" parent="." instance=ExtResource( 7 )]


